# Asombi

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install-macos.sh  install.sh  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-wizzor.yml  ci.yml
assets/: fastfetch.jsonc  logo-large.txt  logo-small.txt  logo.txt  setup-fastfetch.sh
boot/: Makefile  README.md
boot/src/: main.c
docs/: architecture.md  faq.md  instances.md  packages.md  troubleshooting.md  wizzor.md
loader/: Cargo.toml  README.md
loader/src/: loader.rs  main.rs  mount.rs  namespace.rs  probe.rs
truck/core/: clean.py  paths.py  repo.py  utils.py
wizzor-go/: README.md  go.mod
wizzor-go/cmd/wiz/: main.go
wizzor-go/cmd/wiz/commands/: list.go  search.go
wizzor-go/internal/config/: config.go
wizzor-go/internal/db/: installed.go
wizzor-go/internal/fetch/: fetch.go
wizzor-go/internal/output/: ansi_unix.go  ansi_windows.go  output.go
wizzor-go/internal/repo/: parse.go  types.go
wizzor-go/internal/sources/: sources.go
wizzor-go/internal/toml/: toml.go  toml_test.go
wizzor/core/: clean.py  info.py  install.py  list_pkg.py  paths.py  remove.py  repo.py  search.py  update.py  utils.py
